# babata-openai

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
client/: babata_openai.py
client/pb/: __init__.py
client/pb/protos/: babata_openai.proto
database/: init.sql
internal/api/: deps.py  main.py
internal/api/endpoints/: auth.py  openai.py
internal/conf/: settings.py
internal/grpc/: main.py  servicer.py
internal/grpc/pb/: __init__.py  babata_openai.proto
internal/handlers/: account.py  openai.py
internal/models/: __init__.py  account.py  base.py
internal/schemas/: auth.py  base.py  openai.py
internal/services/: openai.py
internal/store/: db.py  redis.py
pkg/: cache.py  db.py  exception_handlers.py  exceptions.py  grpc_server.py  middleware.py  response.py  settings.py
scripts/: grpc_client.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py
tests/grpc/: conftest.py  test_ping.py
utils/: __init__.py
